<resources>
    <string name="app_name">CoronaStats</string>
    <string name="loading">Loading...</string>
    <string name="country_name">Country</string>
    <string name="infected">Infected</string>
    <string name="recovered">Recovered</string>
    <string name="deceased">Deceased</string>
    <string name="tested">Tested</string>
    <string name="more_data">More data</string>
    <string name="history_data">History data</string>
    <string name="source_url">Source URL</string>
    <string name="last_updated">Last updated</string>
</resources>